# fastAPI_learning

./: .gitignore  database.db  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routes/: auth.py  users.py
migrations/versions/: 0500ce7fdcf9_update_table.py  058eb8d74364_atualizando_database.py  26ccad4cd34d_correct_column_update_at.py  33bb24539305_update_users_table.py  aab51a63d59c_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_users.py
